// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component/navbar should have a default behaviour 1`] = `
<div
  className="css-j54ku0 "
  style={Object {}}
>
  <div
    className="css-11xpg4p"
  >
    react-workbench
  </div>
</div>
`;

exports[`component/navbar should take custom className 1`] = `
<div
  className="css-j54ku0 custom"
  style={Object {}}
>
  <div
    className="css-11xpg4p"
  >
    react-workbench
  </div>
</div>
`;

exports[`component/navbar should take custom style 1`] = `
<div
  className="css-j54ku0 "
  style={
    Object {
      "backgroundColor": "red",
    }
  }
>
  <div
    className="css-11xpg4p"
  >
    react-workbench
  </div>
</div>
`;
